--- a/src/App.scss
+++ b/src/App.scss
@@ -1,327 +1,316 @@
-body {
-  padding: 0;
+body { 
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  background-color: #FFF;
+  box-sizing: border-box;
+  background: linear-gradient(331deg, rgb(240, 208, 223) 0%, rgb(240, 241, 221) 50%, rgb(168, 191, 216) 100%);
 }
 
 .wrapper {
-  height: 100vh;
-  text-align: center;
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 80px 1fr;
-  grid-template-areas: 'head head'
-                      'navbar loader';
-  grid-gap: 5px;
-  
-  .heading {
-    width: 100%;
-    height: 100%;
-    grid-area: head;
-    background-color: #F5E9E9;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    font-size: 30px;
-    background: linear-gradient(140deg, #EADEDB 0%, #BC70A4 40%, #BFD641 70%);
-    text-transform: uppercase;
-    background-clip: text;
-	  -webkit-background-clip: text;
-	  -webkit-text-fill-color: transparent;
-  }
-  
-  .nav-bar {
-    grid-area: navbar;
-    background-color: #F5E9E9;
-    border-radius: 30px;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
 
-    ul {
-      list-style: none;
-      padding: 20px;
+  .header {
+    height: 50px;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    color: transparent;
+    -webkit-text-stroke: 1px black;
+    background: linear-gradient(331deg, rgba(227,111,166,1) 0%, rgba(222,234,98,1) 50%, rgba(105,155,214,1) 100%);
 
-      .list-item {
-        margin: 20px 0px;
-        cursor: pointer;
-      }
-
-      .list-item.active {
-        color: #23aceb;
-      }
+    h2 {
+      margin: 10px 0 0 0;
     }
   }
-  
+
   .loaders {
-    grid-area: loader;
-    border-radius: 30px;
-    background-color: #004480;
-    margin: 10px;
     .loader1, .loader2, .loader3, .loader4, .loader5, .loader6{
-        position: relative;
-        width: 100%;
-        height: 100%;
-    }
+      position: relative;
+      width: calc(100% - 60px);
+      height: 30vw;
+      background-color: #004480;
+      box-sizing: border-box;
+      margin: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 
-    .loader1{
-      .loader {
-        width: 25px;
-        height: 25px;
-        position: absolute;
-        top: calc(50% - 15px);
-        left:  calc(50% - 15px);
-        border-radius: 50%;
-        animation: rotate 3s infinite ease;
-        animation-delay: -10s;
-       }
-       
-       .loading {
-         position: absolute;
-         top: 21px; 
-         width: 4px;
-         height: 4px;
-         border-radius: 50%;
-         background-color: #FFFFFF;
-         animation-delay: 5s;
-       }
-       
-       @keyframes rotate {
-         0% {
-           transform: rotateZ(0deg);
-         }
-          100% {
-           transform: rotateZ(360deg);
-         }
-       }
-       
-       div:nth-child(1){
-         animation-delay: 0.1s;
-       }
-       div:nth-child(2){
-         animation-delay: 0.3s;
-       }
-       div:nth-child(3){
-         animation-delay: 0.5s;
-       }
-       
-       div:nth-child(4){
-         animation-delay: 0.7s;
-       }
-       div:nth-child(5){
-         animation-delay: 0.9s;
-       }
-       div:nth-child(6){
-         animation-delay: 1.1s;
-       }
-       div:nth-child(7){
-         animation-delay: 1.3s;
-       }
-       div:nth-child(8){
-         animation-delay: 1.5s;
-       }       
-    }
+      &:hover {
+        box-shadow: 0 12px 20px 0 rgba(0,0,0,0.5);
+        transform: scale(1.009);
+      }
+  }
 
-    .loader2{
-      .dot {
-        width: 12px;
-        height: 12px;
-        position: absolute;
-        top: 50%;
-        background-color: #FFFFFF;
-        border-radius: 50%;
-        animation: fade-in 2s infinite ease;
-      }
-      
-      span:nth-child(1){
-        left: calc(50% - 33px);
-        animation-delay: -0.3s;
-      }
-      span:nth-child(2){
-        left: calc(50% - 15px);
-        animation-delay: -0.6s;
-      }
-      span:nth-child(3){
-        left: calc(50% + 3px);
-        animation-delay: -0.9s;
-      }
-      span:nth-child(4){
-        left: calc(50% + 21px);
-        animation-delay: -1.2s;
-      }
-      
-      @keyframes fade-in {
-        0% {
-            opacity: 0.2;
-          width: 5px;
-          height: 5px
-         
-        }
-        50%{
-          opacity: 0.8;
-          width: 12px;
-          height: 12px
-        }
-         100% {
+  .loader1{
+    .loader {
+      width: 25px;
+      height: 25px;
+      position: absolute;
+      top: calc(50% - 15px);
+      left:  calc(50% - 15px);
+      border-radius: 50%;
+      animation: rotate 3s infinite ease;
+      animation-delay: -10s;
+     }
+     
+     .loading {
+       position: absolute;
+       top: 21px; 
+       width: 4px;
+       height: 4px;
+       border-radius: 50%;
+       background-color: #FFFFFF;
+       animation-delay: 5s;
+     }
+     
+     @keyframes rotate {
+       0% {
+         transform: rotateZ(0deg);
+       }
+        100% {
+         transform: rotateZ(360deg);
+       }
+     }
+     
+     div:nth-child(1){
+       animation-delay: 0.1s;
+     }
+     div:nth-child(2){
+       animation-delay: 0.3s;
+     }
+     div:nth-child(3){
+       animation-delay: 0.5s;
+     }
+     
+     div:nth-child(4){
+       animation-delay: 0.7s;
+     }
+     div:nth-child(5){
+       animation-delay: 0.9s;
+     }
+     div:nth-child(6){
+       animation-delay: 1.1s;
+     }
+     div:nth-child(7){
+       animation-delay: 1.3s;
+     }
+     div:nth-child(8){
+       animation-delay: 1.5s;
+     }       
+  }
+
+  .loader2{
+    .dot {
+      width: 12px;
+      height: 12px;
+      position: absolute;
+      top: 50%;
+      background-color: #FFFFFF;
+      border-radius: 50%;
+      animation: fade-in 2s infinite ease;
+    }
+    
+    span:nth-child(1){
+      left: calc(50% - 33px);
+      animation-delay: -0.3s;
+    }
+    span:nth-child(2){
+      left: calc(50% - 15px);
+      animation-delay: -0.6s;
+    }
+    span:nth-child(3){
+      left: calc(50% + 3px);
+      animation-delay: -0.9s;
+    }
+    span:nth-child(4){
+      left: calc(50% + 21px);
+      animation-delay: -1.2s;
+    }
+    
+    @keyframes fade-in {
+      0% {
           opacity: 0.2;
-          width: 5px;
-          height: 5px;
-        }
-      }     
-    }
+        width: 5px;
+        height: 5px
+       
+      }
+      50%{
+        opacity: 0.8;
+        width: 12px;
+        height: 12px
+      }
+       100% {
+        opacity: 0.2;
+        width: 5px;
+        height: 5px;
+      }
+    }     
+  }
 
-    .loader3{
-      text-align: left;
-      line-height: 1;
-      .inner-circle {
-        position: absolute;
-        top: calc(50% - 10px);
-        left: calc(50% - 10px);
-        transform: translate(-50%, -50%);
-        border: 5px  #FFFFFF solid;
-        box-sizing: border-box;
-        animation: spin 1.2s infinite linear;
-      }
-      
-      .inner-circle {
-        width: 40px;
-        height: 40px;
-        z-index: 1;
-        background-color: #004480;
-        color: #FFFFFF;
-        // opacity: 0.5;
-      }
-      
-      @keyframes spin {
-        0% {
-         transform: perspective(60px) rotateX(0deg) rotateY(-180deg)
-        }
-        
-        25% {
-          transform: perspective(60px) rotateX(0deg) rotateY(0)
-        }
-        
-        50% {
-          transform: perspective(60px) rotateX(-180deg) rotateY(0)
-        }
-        
-        100% {
-          transform: perspective(60px) rotateX(-180deg) rotateY(-180deg)
-        }
-      }     
+  .loader3{
+    text-align: left;
+    line-height: 1;
+    .inner-circle {
+      position: absolute;
+      top: calc(50% - 10px);
+      left: calc(50% - 10px);
+      transform: translate(-50%, -50%);
+      border: 5px  #FFFFFF solid;
+      box-sizing: border-box;
+      animation: spin 1.2s infinite linear;
     }
-
-    .loader4{
-      .wrapper {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        height: 50px;
-        width: 50px;
-        border-radius: 50%;
-        border: 6px solid #FFF;
-      }
-      
-      
-      
-      .point {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        background-color: black;
-        z-index: 2;
-      }
-      
-      .bigpin {
-        background: #FFF;
-        height: 40%;
-        width: 9%;
-        left: 46%;
-        position: absolute;
-        top: 10%;
-        transform-origin: 50% 100%;
-        border-radius: 25% 25% 0px 0px;
-        animation: rotate 2s infinite linear;
-      }
-      
-      .smallpin {
-        background: #FFF;
-        height: 30%;
-        width: 9%;
-        left: 46%;
-        position: absolute;
-        top: 20%;
-        transform-origin: 50% 100%;
-        z-index: 1;
-        border-radius: 25% 25% 0px 0px;
-        animation: rotate 5s infinite linear;
-      }
-      
-      @keyframes rotate {
-        100% {
-          transform: rotateZ(360deg);
-        }
-      }      
+    
+    .inner-circle {
+      width: 40px;
+      height: 40px;
+      z-index: 1;
+      background-color: #004480;
+      color: #FFFFFF;
+      // opacity: 0.5;
     }
+    
+    @keyframes spin {
+      0% {
+       transform: perspective(60px) rotateX(0deg) rotateY(-180deg)
+      }
+      
+      25% {
+        transform: perspective(60px) rotateX(0deg) rotateY(0)
+      }
+      
+      50% {
+        transform: perspective(60px) rotateX(-180deg) rotateY(0)
+      }
+      
+      100% {
+        transform: perspective(60px) rotateX(-180deg) rotateY(-180deg)
+      }
+    }     
+  }
 
-    .loader5 {
+  .loader4{
+    .wrapper {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      border: 6px solid #FFF;
+    }
+    
+    
+    
+    .point {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: black;
+      z-index: 2;
+    }
+    
+    .bigpin {
+      background: #FFF;
+      height: 40%;
+      width: 9%;
+      left: 46%;
+      position: absolute;
+      top: 10%;
+      transform-origin: 50% 100%;
+      border-radius: 25% 25% 0px 0px;
+      animation: rotate 2s infinite linear;
+    }
+    
+    .smallpin {
+      background: #FFF;
+      height: 30%;
+      width: 9%;
+      left: 46%;
+      position: absolute;
+      top: 20%;
+      transform-origin: 50% 100%;
+      z-index: 1;
+      border-radius: 25% 25% 0px 0px;
+      animation: rotate 5s infinite linear;
+    }
+    
+    @keyframes rotate {
+      100% {
+        transform: rotateZ(360deg);
+      }
+    }      
+  }
+
+  .loader5 {
+    .wrapper{
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       .loader {
         width: 0px;
         height: 0px;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         border-radius: 50%;
         border: 15px solid;
         border-color: #FFF transparent #FFF transparent;
         animation: spincircle 1s infinite alternate ease;
       }
-      
-      @keyframes spincircle {
-        0%{
-          transform: rotate(0deg);
-        }
-         100%{
-          transform: rotate(360deg);
-        }
+    }
+    
+    @keyframes spincircle {
+      0%{
+        transform: rotate(0deg);
+      }
+       100%{
+        transform: rotate(360deg);
       }
     }
+  }
 
-    .loader6 {
+  .loader6 {
+    .wrapper {
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
       .circle1, .circle2 {
+        position: absolute;
         width: 40px;
         height:40px;
         background-color: #FFF;
         border-radius: 50%;
         opacity: 0.6;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         animation: scaling 2s infinite ease-in-out;
       }
       
       .circle2{
         animation-delay: -1s;
       }
-      
-      @keyframes scaling {
-         0%, 100% {
-           transform: scale(0.0);
-         }
-         50% {
-           transform: scale(1.0);
-         }
-      }
     }
-  }  
+    
+    
+    @keyframes scaling {
+       0%, 100% {
+         transform: scale(1.0);
+       }
+       50% {
+         transform: scale(0.0);
+       }
+    }
+  }
+ }  
 }
